--- a/src/app/fijaciones/fijaciones.page.html
+++ b/src/app/fijaciones/fijaciones.page.html
@@ -2,5 +2,10 @@
   <ion-toolbar>
     <ion-title>Fijaciones</ion-title>
   </ion-toolbar>
+
+
+
+  <ion-button type="button" expand="full" color="medium" (click)="Crear_transaccion()">pagar</ion-button>
 </ion-header>
 
+<ion-button type="button" expand="full" color="medium" (click)="Crear_transaccion()">pagar</ion-button>
