--- a/src/app/fijaciones/fijaciones.page.html
+++ b/src/app/fijaciones/fijaciones.page.html
@@ -4,3 +4,14 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let producto of productos">
+      <ion-label>
+        <h2>{{ producto.NombreProducto }}</h2>
+        <p>{{ producto.Descripcion }}</p>
+        <p>{{producto.Precio }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
