--- a/src/app/manuales/manuales.page.html
+++ b/src/app/manuales/manuales.page.html
@@ -2,5 +2,18 @@
   <ion-toolbar>
     <ion-title>Herramientas Manuales</ion-title>
   </ion-toolbar>
+  
 </ion-header>
 
+
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let producto of productos">
+      <ion-label>
+        <h2>{{ producto.NombreProducto }}</h2>
+        <p>{{ producto.Descripcion }}</p>
+        <p>{{producto.Precio }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
