--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -10,6 +10,7 @@
 
       <ion-card-header>
         <ion-card-title>Tipos de Productos</ion-card-title>
+        <ion-button type="button" expand="full" color="medium" [routerLink]="['/compra']">Ir a Pagar</ion-button>
       </ion-card-header>
 
       <ion-button (click)="mostrarProductosPorTipo('materiales')">Materiales</ion-button>
