--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -29,7 +29,7 @@
 
     <ion-list style="text-align:center">
 
-      <ion-button type="button" expand="" color="success" [routerLink]="['/suscribete']">Suscribete</ion-button>
+      <ion-button type="button" expand="" color="success" [routerLink]="['/registro']">Suscribete</ion-button>
 
     </ion-list>
 
